tests/baselines/reference/doWhileContinueStatements.errors.txt
tests/cases/conformance/statements/continueStatements/doWhileContinueStatements.ts(5,1): error TS7027: Unreachable code detected.


==== tests/cases/conformance/statements/continueStatements/doWhileContinueStatements.ts (1 errors) ====
    do {
        continue;
    } while(true)
    
    ONE:
    ~~~
!!! error TS7027: Unreachable code detected.
    do {
        continue ONE;
    }
    while (true)
    
    TWO:
    THREE:
    do {
        continue THREE;
    }while (true)
    
    FOUR:
    do {
        FIVE:
        do {
            continue FOUR;
        }while (true)
    }while (true)
    
    do {
        SIX:
        do continue SIX; while(true)
    }while (true)
    
    SEVEN:
    do do do continue SEVEN; while (true) while (true)  while (true)
    
    EIGHT:
    do{
        var fn = function () { }
        continue EIGHT;
    }while(true)
    